--- a/src/secrets.h.example
+++ b/src/secrets.h.example
@@ -1,13 +1,16 @@
 #include <Arduino.h>
-
+//TODO: rewrite this to english
 /*
-    A secrets.h file-ba kell beleírnod az internedet nevét és jelszavát.
+    A secrets.h file-ba kell beleírnod a wifi hálózatod nevét és jelszavát.
     Ez a file csakis a te saját eszközödön létezik és senkinek nincs hozzá hozzáfáráse
     a következő képpen kell kitölteni a secrets.h file-t:
 */
 
 class Secrets{
     public:
-        const char* SSID = "PÉLDANET"; //Ide a nevét kell beírnod
-        const char* pass = "12345"; //Ide pedig a jelszót
+        String update_server = "http://arduino-update-service.com";
+        const char *SSID_1 = "PÉLDANET"; //Ide a nevét kell beírnod
+        const char *pass_1 = "12345"; //Ide pedig a jelszót, 
+        const char *SSID_2 = "PÉLDANET"; //Ide a nevét kell beírnod, "" ha nem kívánod használni
+        const char *pass_2 = "12345"; //Ide pedig a jelszót
 };
